Remove code climate and travis

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       </header>
       <section>
-        <h1>CanBe <a href="https://travis-ci.org/mstarkman/can_be"><img src="https://secure.travis-ci.org/mstarkman/can_be.png?branch=master" alt="Build Status"></a> <a href="https://codeclimate.com/github/mstarkman/can_be"><img src="https://codeclimate.com/badge.png" alt="Code Climate"></a>
+        <h1>CanBe</a>
 </h1>
 
 <p>CanBe allows you to track the type of your ActiveRecord model in a consistent simple manner.  With just a little configuration on your part, each type of record can contain different attributes that are specifc to that type of record.  From a data modelling perspective this is preferred over <a href="http://api.rubyonrails.org/classes/ActiveRecord/Base.html#label-Single+table+inheritance">ActiveRecord STI</a> since you will not have many columns in your database that have null values.  Under the hood, CanBe uses one-to-one <a href="http://guides.rubyonrails.org/association_basics.html#polymorphic-associations">Polymorphic Associations</a> to accomplish the different attributes per type.</p>
