clean up after regeneration

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Can be by mstarkman</title>
+    <title>CanBe by Mark Starkman</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Can be</h1>
+        <h1 class="header">CanBe</h1>
         <p class="header">CanBe allows you to track the type of your ActiveRecord model in a consistent simple manner.  With just a little configuration on your part, each type of record can contain different attributes that are specifc to that type of record.</p>
 
         <ul>
@@ -25,13 +25,15 @@
           <li><a class="buttons github" href="https://github.com/mstarkman/can_be">View On GitHub</a></li>
         </ul>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/mstarkman">mstarkman</a></p>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/mstarkman">Mark Starkman</a></p>
 
 
       </header>
       <section>
-        <h1>CanBe <a href="https://travis-ci.org/mstarkman/can_be"><img src="https://secure.travis-ci.org/mstarkman/can_be.png?branch=master" alt="Build Status"></a> <a href="http://badge.fury.io/rb/can_be"><img src="https://badge.fury.io/rb/can_be.png" alt="Gem Version"></a> <a href="https://codeclimate.com/github/mstarkman/can_be"><img src="https://codeclimate.com/badge.png" alt="Code Climate"></a>
-</h1>
+        <h1>CanBe</h1>
+        	<a href="https://travis-ci.org/mstarkman/can_be"><img src="https://secure.travis-ci.org/mstarkman/can_be.png?branch=master" alt="Build Status"></a>
+        	<a href="http://badge.fury.io/rb/can_be"><img src="https://badge.fury.io/rb/can_be.png" alt="Gem Version"></a>
+        	<a href="https://codeclimate.com/github/mstarkman/can_be"><img src="https://codeclimate.com/badge.png" alt="Code Climate"></a>
 
 <p>CanBe allows you to track the type of your ActiveRecord model in a consistent simple manner.  With just a little configuration on your part, each type of record can contain different attributes that are specifc to that type of record.  From a data modelling perspective this is preferred over <a href="http://api.rubyonrails.org/classes/ActiveRecord/Base.html#label-Single+table+inheritance">ActiveRecord STI</a> since you will not have many columns in your database that have null values.  Under the hood, CanBe uses one-to-one <a href="http://guides.rubyonrails.org/association_basics.html#polymorphic-associations">Polymorphic Associations</a> to accomplish the different attributes per type.</p>
 
